@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-27T16:11:33Z",
-  "count_outdated" : 1413,
-  "uniques_outdated" : 766,
+  "timestamp" : "2023-10-28T00:41:19Z",
+  "count_outdated" : 1416,
+  "uniques_outdated" : 768,
   "count" : 1444,
   "uniques" : 784,
   "clones" : [
-    {
-      "timestamp": "2023-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-14T00:00:00Z",
       "count": 2,
